--- a/templates/main.html
+++ b/templates/main.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 {% load static %}
+    {% if LANGUAGE_CODE == 'ar' %}
 <html lang="ar" dir="rtl">
+{% else %}
+<html lang="en">
+{% endif %}
 <head>
     <title>{% block title %}  {% endblock title %}</title>
     <meta charset="utf-8" />
