--- a/templates/mobileMenu.html
+++ b/templates/mobileMenu.html
@@ -104,6 +104,7 @@
                     <span class="nav-link-text me-1">ملكية الأسهم</span>
                 </a>
             </li>
+            <li class="nav-item" style="margin-inline: 1rem;">{% include 'partials/menus/_language.html' %}</li>
 
 {% if request.user.user_type == 1 %}
             <li class="nav-item mt-3">
