--- a/templates/userlayout.html
+++ b/templates/userlayout.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
+    {% if LANGUAGE_CODE == 'ar' %}
 <html lang="ar" dir="rtl">
+{% else %}
+<html lang="en">
+{% endif %}
 {% load static %}
 <head>
   <meta charset="utf-8" />
