--- a/templates/partials/_companyArrowsOwnersTable.html
+++ b/templates/partials/_companyArrowsOwnersTable.html
@@ -19,6 +19,8 @@
               {% if request.user.user_type == 1 or request.user.user_type == 2  %}
               <th class="text-center text-xxs" style="width: auto;">
                     </th>
+                     <th class="text-center text-xxs" style="width: auto;">
+                    </th>
             {% endif %}
         </tr>
         </thead>
@@ -51,7 +53,10 @@
                     </td>
                   {% if request.user.user_type == 1 or request.user.user_type == 2  %}
                <td class="ms-auto text-start">
-                                            <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'update-ِCompanyArrows' item.id %}"><i class="fas fa-pencil-alt text-primary me-2" aria-hidden="true"></i>تعديل</a>
+                                            <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'update-company-Arrows' item.id %}"><i class="fas fa-pencil-alt text-primary me-2" aria-hidden="true"></i>تعديل</a>
+                                        </td>
+                              <td class="ms-auto text-start">
+                                            <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'delete-company-Arrows' item.id %}"><i class="fas fa-trash text-danger me-2" aria-hidden="true"></i>حذف</a>
                                         </td>
             {% endif %}
                                 </tr>
