--- a/templates/partials/_rateMoreDetails.html
+++ b/templates/partials/_rateMoreDetails.html
@@ -64,21 +64,33 @@
                                                         <p class="text-xxs  mb-0">{{ item.FairValue }}</p>
                                                     </td>
                                                     <td class="align-middle text-center text-xxs">
-                                                       {% if item.changeFair %}
-                                                           <p class="text-xxs text-danger  mb-0">{{ item.fair_percentage |floatformat:-2 }}</p>
+                                                       {% if item.fair_percentage < 0 %}
+                                                           <div class="d-flex justify-content-around">
+                                                           <i class="fas fa-arrow-down text-xxs text-danger"></i>
+                                                           <p class="text-xxs text-danger  mb-0">{{ item.fair_percentage |floatformat:-3 }}</p>
+                                                           </div>
                                                         {% else %}
-                                                           <p class="text-xxs text-success  mb-0">{{ item.fair_percentage |floatformat:-2 }}</p>
-                                                        {% endif %}
+                                                           <div class="d-flex justify-content-around">
+                                                           <i class="fas fa-arrow-up text-xxs text-success"></i>
+                                                           <p class="text-xxs text-success  mb-0">{{ item.fair_percentage |floatformat:-3 }}</p>
+                                                           </div>
+                                                       {% endif %}
                                                     </td>
                                                     <td class="align-middle text-center text-xxs">
                                                         <p class="text-xxs  mb-0">{{ item.MarketValue }}</p>
                                                     </td>
                                                     <td class="align-middle text-center text-xxs">
-                                                       {% if item.changeMarket %}
-                                                           <p class="text-xxs text-danger  mb-0">{{ item.market_percentage |floatformat:-2 }}</p>
+                                                       {% if item.market_percentage < 0 %}
+                                                          <div class="d-flex justify-content-around">
+                                                            <i class="fas fa-arrow-down text-xxs text-danger"></i>
+                                                           <p class="text-xxs text-danger  mb-0">{{ item.market_percentage |floatformat:-3 }}</p>
+                                                          </div>
                                                         {% else %}
-                                                           <p class="text-xxs text-success  mb-0">{{ item.market_percentage |floatformat:-2 }}</p>
-                                                        {% endif %}
+                                                          <div class="d-flex justify-content-around">
+                                                           <i class="fas fa-arrow-up text-xxs text-success"></i>
+                                                           <p class="text-xxs text-success  mb-0">{{ item.market_percentage |floatformat:-3 }}</p>
+                                                          </div>
+                                                       {% endif %}
                                                     </td>
 
 
