fianl eidts tables

--- a/templates/partials/_ratesTable.html
+++ b/templates/partials/_ratesTable.html
@@ -94,7 +94,7 @@
 {#                                        </td>#}
 
                                         <td class="align-middle text-center text-xxs" style="width: 1.2rem;">
-                                            <a href="../../../static/images/reportspdf/{{ item.report.name }}">
+                                            <a href="{{ item.report.url }}">
                                                 <i class="fas fa-file-pdf text-danger">
                                                 </i>
                                             </a>
