--- a/templates/partials/_ratesTable.html
+++ b/templates/partials/_ratesTable.html
@@ -32,7 +32,7 @@
                                     <th class="text-center   text-xxs " style="width: 1.2rem;">
                                         تاريخ التوصية
                                     </th>
-                                    {% if request.user.user_type == 1 or request.user.user_type == 2 %}
+                                    {% if request.user.user_type != 3 %}
                                      <th class="text-center   text-xxs " style="width: 0.2rem;">
                                     </th>
                                           <th class="text-center   text-xxs " style="width: 0.2rem;">
@@ -107,7 +107,7 @@
                                             <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'rate-details' item.id %}"><i class="fas fa-pencil-alt text-primary me-2" aria-hidden="true"></i>المزيد</a>
 
                                         </td>
-                                               <td class="ms-auto text-start">
+                                               <td class="ms-auto text-start" style="width: 0.2rem;">
                                             <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'rate-delete' item.id %}"><i class="fas fa-trash text-danger me-2" aria-hidden="true"></i>حذف</a>
                                         </td>
                                     {% endif %}
