--- a/templates/partials/_companyArrowsOwnersTable.html
+++ b/templates/partials/_companyArrowsOwnersTable.html
@@ -51,11 +51,11 @@
                    <td class="align-middle text-center text-xxs">
                      <p class="text-xxs">{{ item.TotalArrowPrice  }}</p>
                     </td>
-                  {% if request.user.user_type == 1 or request.user.user_type == 2  %}
-               <td class="ms-auto text-start">
+                  {% if request.user.user_type != 3  %}
+               <td class="ms-auto text-start" style="width: 1.2rem;">
                                             <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'update-company-Arrows' item.id %}"><i class="fas fa-pencil-alt text-primary me-2" aria-hidden="true"></i>تعديل</a>
                                         </td>
-                              <td class="ms-auto text-start">
+                              <td class="ms-auto text-start" style="width: 1.2rem;">
                                             <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'delete-company-Arrows' item.id %}"><i class="fas fa-trash text-danger me-2" aria-hidden="true"></i>حذف</a>
                                         </td>
             {% endif %}
