--- a/templates/partials/_ownerTable.html
+++ b/templates/partials/_ownerTable.html
@@ -12,7 +12,7 @@
 عدد الأسهم (مليون سهم)            </th>
                <th class="text-center text-xxs" style="width: auto;">
 القيمة السوقية (مليون ريال)            </th>
-            {% if request.user.user_type == 1 or request.user.user_type == 2  %}
+              {% if request.user.first_name and request.user.user_type != 3  %}
               <th class="text-center text-xxs" style="width: auto;">
                     </th>
                  <th class="text-center text-xxs" style="width: auto;">
@@ -39,7 +39,7 @@
                      <p class="text-xxs">{{ item.TotalPriceArrows  }}</p>
                     </td>
 
-            {% if request.user.user_type != 3  %}
+              {% if request.user.first_name and request.user.user_type != 3  %}
           <td class="ms-auto text-start" style="width: 1.2rem">
               <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'update-owner' item.id %}"><i class="fas fa-pencil-alt text-primary me-2" aria-hidden="true"></i>تعديل</a>
                                         </td>
