--- a/templates/partials/_expectTable.html
+++ b/templates/partials/_expectTable.html
@@ -83,7 +83,7 @@
                                 </td>
 
                              <td class="  text-xxs">
-                                   <a href="{{ item.report }}"><i class="fas fa-file-pdf text-xxs" aria-hidden="true"></i></a>
+                                   <a href="{{ item.report.url }}"><i class="fas fa-file-pdf text-xxs" aria-hidden="true"></i></a>
                                 </td>
 
 
