--- a/userInterface/templates/userInterface/expect-list.html
+++ b/userInterface/templates/userInterface/expect-list.html
@@ -7,9 +7,8 @@
 <section class="min-vh-85 mb-8">
     <div class=" page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style=" background-image: url('../../../static/images/maalbg.jpeg');">
       <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-5  mx-auto pt-lg-5">
-          </div>
+        <div class="row justify-content-center pt-8">
+                           {% include 'partials/menus/_mainMenu.html' %}
         </div>
       </div>
     </div>
