--- a/office/templates/office/expectation-list.html
+++ b/office/templates/office/expectation-list.html
@@ -81,7 +81,10 @@
                             <th class="text-center text-dark text-xxs" style="width: 2rem;">
                                 المرفق
                             </th>
-                            <th class="text-center text-dark text-xxs">
+                            <th class="text-center text-dark text-xxs" style="width: 2rem;">
+
+                            </th>
+                        <th class="text-center text-dark text-xxs" style="width: 2rem;">
 
                             </th>
                         </tr>
@@ -129,14 +132,17 @@
                                 </td>
 
                              <td class="align-middle text-center text-xxs">
-                                   <a href="{{ item.report }}"><i class="fas fa-file-pdf text-xxs" aria-hidden="true"></i></a>
+                                   <a href="{{ item.report.url }}"><i class="fas fa-file-pdf text-xxs" aria-hidden="true"></i></a>
                                 </td>
 
       <td class="ms-auto text-start">
-                                                      <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'expect-update' item.pk %}"><i class="fas fa-pencil-alt text-success"></i>تعديل</a>
 
                                             <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'expect-delete' item.pk %}"><i class="fas fa-trash text-danger me-2" aria-hidden="true"></i>حذف</a>
                                         </td>
+   <td class="ms-auto text-start">
+       <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'expect-update' item.pk %}"><i class="fas fa-pencil-alt text-success"></i>تعديل</a>
+
+   </td>
                             </tr>
                         {% endfor %}
 
