--- a/templates/partials/_companiesArrowTable.html
+++ b/templates/partials/_companiesArrowTable.html
@@ -16,7 +16,7 @@
 التغير            </th>
              <th class="text-center text-xxs" style="width: auto;">
 عدد الأسهم           </th>
-              {% if request.user.first_name and request.user.user_type != 3  %}
+                                   {% if request.user.is_emp or request.user.is_admin   %}
               <th class="text-center text-xxs" style="width: auto;">
                     </th>
                    <th class="text-center text-xxs" style="width: auto;">
@@ -59,7 +59,7 @@
                          <p class="text-xxs">0</p>
                        {% endif %}
                     </td>
-              {% if request.user.first_name and request.user.user_type != 3  %}
+                                   {% if request.user.is_emp or request.user.is_admin   %}
                <td class="ms-auto text-start">
                                             <a class="btn btn-link text-dark px-3 mb-0" href="{% url 'update-arrow' item.id %}"><i class="fas fa-pencil-alt text-primary me-2" aria-hidden="true"></i>تعديل</a>
                                         </td>
