--- a/templates/partials/_companyRateAnalystTable.html
+++ b/templates/partials/_companyRateAnalystTable.html
@@ -44,9 +44,13 @@
 
                                         </td>
                                         <td class="align-middle text-center text-xxs">
-                                            <a href="{% url 'user-interface' item.AnalayticName.id %}">
+                                           {% if item.AnalayticName == None %}
+                                          <p class="text-xxs text-muted">لا يوجد محلل </p>
+                                               {% else %}
+                                                <a href="{% url 'user-interface' item.AnalayticName.id %}">
                                                            <p class="text-xxs">{{ item.AnalayticName.name }}</p>
                                                        </a>
+                                            {% endif %}
 
                                        </td>
                                         <td class="align-middle text-center text-xxs">
@@ -81,7 +85,7 @@
                                         </td>
 
                                         <td class="align-middle text-center text-xxs">
-                                            <a href="../../../static/images/reportspdf/{{ item.report.name }}">
+                                            <a href="{{ item.report.url }}">
                                                 <i class="fas fa-file-pdf text-danger">
                                                 </i>
                                             </a>
