--- a/userInterface/templates/userInterface/analyst-profile.html
+++ b/userInterface/templates/userInterface/analyst-profile.html
@@ -25,7 +25,11 @@
         <div class="row gx-4">
           <div class="col-auto">
             <div class="avatar avatar-xl position-relative">
-              <img src="{% static 'images/user.svg' %}" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
+              {% if analyst.logo.url != None %}
+                 <img src="{{ analyst.logo.url }}" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
+                {% else %}
+                   <img src="{% static 'images/logo_analyst.jpeg' %}" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
+                {% endif %}
             </div>
           </div>
           <div class="col-auto my-auto">
