--- a/templates/partials/_pagination.html
+++ b/templates/partials/_pagination.html
@@ -20,22 +20,39 @@
 {% for i in page_obj.paginator.page_range %}
     {% if page_obj.number == i %}
     <li class="page-item active">
-        <a class="page-link" href="?page={{ i }}">{{ page_obj.number }}</a>
+       {% if page == None %}
+           <a class="page-link" href="?page={{ i }}">{{ page_obj.number }}</a>
+           {% else %}
+           <a class="page-link" href="?{{ page }}={{ i }}">{{ page_obj.number }}</a>
+
+           {% endif %}
       </li>
     {% elif i > page_obj.number|add:'-5' and i < page_obj.number|add:'5' %}
     <li class="page-item">
+           {% if page == None %}
         <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+          {% else %}
+        <a class="page-link" href="?{{ page }}={{ i }}">{{ i }}</a>
+           {% endif %}
       </li>
     {% endif %}
 {% endfor %}
 
 {% if page_obj.paginator.num_pages > page_obj.number|add:'4' %}
+               {% if page == None %}
     <li><a class="page-link" href="?page={{ page_obj.number|add:'5' }}">&hellip;</a></li>
+                   {% else %}
+                   <li><a class="page-link" href="?{{ page }}={{ page_obj.number|add:'5' }}">&hellip;</a></li>
+                   {% endif %}
 {% endif %}
 
 {% if page_obj.has_next %}
     <li class="page-item">
+                   {% if page == None %}
         <a class="page-link" href="?page={{ page_obj.next_page_number }}">
+        {% else %}
+        <a class="page-link" href="?{{ page }}={{ page_obj.next_page_number }}">
+            {% endif %}
           <i class="fas fa-angle-left"></i>
           <span class="sr-only">التالى</span>
         </a>
